partial admin, bugfixes...
